bugfix: clock dark mode colors,  nullish coalescing of avax price, hashmap of selected bets

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -55,7 +55,7 @@ code {
   @apply bg-stone-200 dark:bg-stone-500;
 }
 #page > main::-webkit-scrollbar-thumb {
-  @apply bg-stone-400 dark:bg-stone-700 rounded-full;
+  @apply bg-stone-400 dark:bg-stone-800 rounded-full;
 }
 
 .color-shift {
